# XLeKiwi

./: .gitignore  LICENSE  README.md  pyproject.toml
install/: add_dds_route.sh  fastdds_usb.xml.template  install_python_deps.sh  install_system_deps.sh  setup_runtime_env.sh
panthera_python/: CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
panthera_python/Panthera-HT_description/urdf/: Panthera-HT_description_follower.urdf
panthera_python/robot_param/: Follower.yaml  Follower_panthera.yaml  Follower_xlerobot_ht.yaml  Leader.yaml  Leader_panthera.yaml  Leader_xlerobot_ht.yaml
panthera_python/robot_param/motor_param/: 6dof_Panthera_params_follower.yaml  6dof_Panthera_params_leader.yaml  6dof_xlerobot_ht_params_follower.yaml  6dof_xlerobot_ht_params_leader.yaml  motor_1.yaml  motor_6.yaml
panthera_python/scripts/: 0_robot_get_state.py  0_robot_set_zero.py  1_Joint_PD_control.py  1_Joint_PosVel_control.py  1_Joint_Vel_control.py  1_forward_kinematics_test.py  1_inverse_kinematics_test.py  1_moveJ_control.py  2_Jointimpendence_control_with_gra_fri_pd.py  2_Jointimpendence_control_with_gra_pd.py  2_gravity_compensation_control.py  2_gravity_friction_compensation_control.py  2_inv_PosVel_control.py  3_gravity_compensation_with_fk.py  3_interpolation_control_nozeroVel.py  3_interpolation_control_zeroVel.py  3_sin_trajectory_control.py  4_impedance_trajectory_control_with_gra_pd.py  5_record_trajectory.py  5_replay_trajectory.py  5_teleop_control.py  6_moveL_pos_control.py  6_moveL_rotate_control.py  7_keyboard_cartesian_pos_control.py  7_keyboard_cartesian_vel_control.py  7_keyboard_ee_control_cart_impedance.py  7_keyboard_ee_control_cart_impedance_polar.py  7_keyboard_ee_control_cart_impedance_polar_ori.py  7_keyboard_ee_control_cart_impedance_polar_web.py  7_keyboard_ee_control_joint_impedance.py  7_keyboard_ee_control_joint_impedance_web.py  8_arm_base_web_control.py
panthera_python/scripts/Panthera_lib/: Panthera.py  __init__.py  recorder.py
panthera_python/scripts/motor_example/: 01_motor_get_status.py  02_position_control.py  03_velocity_control.py  04_torque_control.py  05_voltage_control.py  06_current_control.py  07_pos_vel_maxtorque_control.py  08_pos_vel_torque_kp_kd_control.py  09_set_zero.py  motor_README.md  motor_control.py
panthera_python/src/: bindings.cpp
panthera_python/xlerobot_ht_description/launch/: display.launch
panthera_python/xlerobot_ht_description/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
panthera_python/xlerobot_ht_description/urdf/: xlerobot_ht_description.csv  xlerobot_ht_description_leader.urdf
panthera_python/xlerobot_ht_description_gripper/: CMakeLists.txt  package.xml
panthera_python/xlerobot_ht_description_gripper/config/: joint_names_xlerobot_ht_description.yaml
panthera_python/xlerobot_ht_description_gripper/launch/: gazebo.launch
panthera_python/xlerobot_ht_description_gripper/meshes/: L_finger.STL  R_finger.STL  base_link.STL  gripper_center.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
panthera_python/xlerobot_ht_description_gripper/urdf/: xlerobot_ht_description.csv  xlerobot_ht_description.urdf
scripts/: 0_integrated_demo.py  1_odrive_web_control.py  2_insight_chassis_demo.py
